# mustang

./: .gitignore  COMPILE.md  INSTALL.md  LICENSE  README.md  TODO.md  app.js  application.ini  chrome.manifest  package-lock.json  package.json  test.js
app/: .gitignore  TODO.md  eslint.config.js  index.html  lingui.config.ts  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: HTTPServer.ts  acebase.ts  backend.ts  ntlm.js  owa.ts  package.json
content/: app.js  app.xul
desktop/: .gitignore  README.md  com.beonex.Parula.yml  electron-builder.yml  electron.vite.config.ts  im.mustang.Mustang.yml  package.json  parula.sh  svelte.config.mjs  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo
docs/: INSTALL.md
e2/: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.yaml  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  svelte.config.mjs  tsconfig.json  tsconfig.json.license  tsconfig.node.json
electron/: .eslintrc.json  index.html  package.json  vite.renderer.config.ts
lib/: TODO.md  index.js  node_modules  package.json
mobile/: .gitignore  archive.plist  build.sh  capacitor.config.json  capacitor.config.ts  package.json  tsconfig.json  vite.config.ts
mobile/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  node-process.cpp
node-websocket/: package.json  server.ts
project/: INSTALL.md  generate-attribution.sh
proton/: app.js  package.json
react-electron/: app-global.js  app.js  package.json  webpack.config.js
(+2463 files in other folders)
